fix: unlimit image links auto insertion, set max width when zoomed on mobile

--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -895,6 +895,7 @@ span.add-node:after {
 }
 .editor-preview img:hover {
   max-height: unset;
+  max-width: 90vw;
 }
 /*-- ----------------------------Narrow overrides---------------------------- */
 @media screen and (max-width: 900px) {
